# lightbridge-code-intelligence

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  biome.json  compose.yaml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  dev-ticket.yml  epic.yml  user-story.yml
.github/workflows/: build-images.yml  control-plane-tests.yml  dashboards.yml  governance.yml  opencode.yml  rust-lint.yml
apps/web/: .env.example  Dockerfile  README.md  middleware.ts  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: layout.tsx  (+1 more)
apps/web/components/: command-palette.tsx  command-snippet.tsx  console-shell.tsx  insights.tsx  nav-link.tsx  repo-list.tsx  review-output.tsx  run-list.tsx  run-logs.tsx  run-row.tsx  run-table.tsx  run-timeline.tsx  states.tsx
apps/web/lib/: admin.ts  api.ts  auth-client.ts  auth.ts  cn.ts  config.ts  insights.ts  oidc.ts  repos.ts  session.ts  tasks.ts
deploy/: README.md
deploy/envs/production/: values.yaml
deploy/keycloak/: realm-lightbridge.json
deploy/observability/: Chart.yaml  README.md  values.yaml
deploy/observability/dashboards/: feedback.json  ingress-dispatcher.json  operations.json  overview.json  repositories.json  review-cost.json  review-quality.json  task-runs.json
deploy/observability/templates/: grafana-dashboards.yaml  grafana-datasource-postgres.yaml  grafana-folder.yaml
docs/: INDEX.md  architecture.md  components-and-data-models.md  control-plane-roles-and-github-egress.md  executive-summary.md  faq.md  github-app-and-control-plane.md  indexing-and-storage.md  jobs-and-lifecycle.md  kubernetes-deployment.md  local-setup.md  opencode-acp-mcp.md  review-pipeline.md  security-observability-testing-rollout.md
docs/adr/: 0000-adr-template.md  0001-use-github-app.md  0002-rust-control-plane-trust-boundary.md  0003-dual-retrieval-neo4j-pgvector.md  0004-one-k8s-job-per-task.md  0005-cratestack-schema-first-control-plane.md  0006-nextjs-app-router-web-ui.md  0007-better-auth-rust-backend-plugin.md  0008-adopt-ai-governance-framework.md  0009-pnpm-turborepo-monorepo.md  0010-graphify-treesitter-indexing-baseline.md  0011-engineering-practices-xp-lean-devops.md  0012-rfc-process-alongside-adrs.md  0013-local-dev-and-build-tooling.md  0014-keycloak-oidc-resource-server.md  0015-web-console-design-language.md  0016-dashboard-information-architecture.md  0017-agent-runner-control-plane-bootstrap.md  0018-openai-compatible-embeddings.md  0019-graphify-cli-structural-graph.md  0020-mcp-servers-via-control-plane.md  0021-opencode-headless-review-agent.md  0022-review-writeback-control-plane.md  0023-db-backed-rbac.md  0024-web-console-redesign-v2.md  0025-review-reuses-base-index.md  0026-native-review-agent.md  0027-daisyui-design-system.md  0028-agent-job-control-sidecar-external-pipeline.md  0028-agent-job-control-sidecar.md  0029-focused-review-not-generic-runner.md  0030-repo-review-config.md  0031-review-skills-commands.md  0032-review-finding-priority-and-category.md  0033-inbound-command-parsing-and-run-kinds.md  0034-agent-run-transcript-and-observability.md  0035-review-feedback-signal.md  0036-auto-read-agent-instruction-files.md  0037-agent-acts-via-mediated-tools.md  0038-per-repo-review-model.md  (+32 more)
docs/drafts/: review-system-prompt.md
docs/eval/: tier2-authz.ts  tier2-empty-retrieval.md  tier2-session-auth.rs  tier2-session-ttl.ts
docs/rfc/: 0000-rfc-template.md  0001-horizontally-scalable-control-plane.md  0002-incremental-layered-indexing.md  0003-skip-auto-review-on-bot-authored-prs.md  README.md
docs/ways-of-working/: engineering-practices.md  okrs.md
services/agent-runner/: Cargo.toml  Dockerfile  README.md  package.json
services/agent-runner/examples/: rig_spike.rs
services/agent-runner/src/: client.rs  clone.rs  config.rs  embeddings.rs  lib.rs  main.rs  ratelimit.rs
services/agent-runner/src/bootstrap/: client.rs  config.rs  mod.rs
services/agent-runner/src/indexer/: chunker.rs  embeddings.rs  graph.rs  language.rs  mod.rs
services/agent-runner/src/review/: config.rs  instructions.rs  mod.rs  parse.rs
services/agent-runner/src/review/native/: agent.rs  chat.rs  mod.rs  tools.rs
services/agent-runner/src/sast/: mod.rs
services/agent-runner/tests/: control_plane_contract.rs
services/config/: Cargo.toml  README.md
services/config/src/: lib.rs
services/control-plane/: Cargo.toml  Dockerfile  README.md  package.json
services/control-plane/migrations/: 0001_init.sql  0002_task_delivery_index.sql  0003_task_queue.sql  0004_code_chunks.sql  0005_embedding_4096.sql  0006_reapable_index.sql  0007_repo_approval.sql  0008_index_on_approve.sql  0009_reviews.sql  0010_review_url.sql  0011_task_kind.sql  0012_pending_review_actions.sql  0013_review_github_id.sql  0014_agent_transcript.sql  0015_review_feedback.sql  0016_task_error_detail.sql  0017_transcript_model_and_reasoning.sql  0018_code_chunks_latest_snapshot_idx.sql  0019_review_comment_failure_notice_kind.sql  0020_github_outbox.sql  0021_task_tier.sql  0022_task_trigger_comment.sql
services/control-plane/schema/: control-plane.cstack
services/control-plane/src/: admin.rs  auth.rs  config.rs  db.rs  dispatcher.rs  failure_notice.rs  github.rs  internal.rs  jwt.rs  k8s.rs  lifecycle.rs  main.rs  mcp_client.rs  metrics.rs  neo4j.rs  outbox.rs  reaper.rs  review.rs  tasks.rs  types.rs  webhook.rs
services/control-plane/src/http/: admin.rs  internal.rs  metrics.rs  mod.rs  webhook.rs
services/control-plane/src/integrations/: github.rs  k8s.rs  mod.rs  neo4j.rs
services/control-plane/src/queue/: dispatcher.rs  index_sweeper.rs  lifecycle.rs  mod.rs  outbox_sweeper.rs  poller.rs  reaper.rs  reconciler.rs  tasks.rs
services/control-plane/tests/: auth_contract.rs
tools/dashboard-gen/: README.md  generate.py  requirements.txt
xtask/: Cargo.toml
xtask/src/: main.rs
(+51 files in other folders)
