# Cargo workspace for the Lightbridge Rust services and automation.
# The control plane is the standalone, portable backend (HTTP control + auth surface);
# the agent runner is the per-task Kubernetes Job that clones/indexes/reviews a repo;
# `xtask` is the build/CI automation entrypoint invoked from the justfile.
[workspace]
resolver = "2"
members = ["services/config", "services/control-plane", "services/agent-runner", "xtask"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/vymalo/lightbridge-code-intelligence"

# Single source of truth for every third-party version. Member crates declare deps as
# `<crate>.workspace = true` (features are set here, not per-member) so a version bump happens
# in exactly one place. Internal path deps (e.g. lightbridge-config) stay in the member manifests.
[workspace.dependencies]
# --- Shared across the Rust services ---
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# rustls everywhere (no OpenSSL in the runtime images).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# Explicit rustls handle so the control-plane binary can pin ONE crypto provider at startup. Two are
# linked in this workspace — `ring` (via sqlx's `tls-rustls-ring-webpki`) and `aws-lc-rs` (pulled
# transitively by `rmcp` → reqwest 0.13 → rustls-platform-verifier). With both present, rustls 0.23
# can't auto-select a process-default provider and panics on the first TLS handshake; we install
# `ring` up front in `main`. Only control-plane pulls both, so only it needs the handle.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Concurrent joins for batched read-only tool dispatch (ADR-0042).
futures = "0.3"

# --- control-plane: HTTP + auth ---
axum = "0.8"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
time = { version = "0.3", features = ["serde-well-known", "formatting"] }

# --- control-plane: persistence + platform ---
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "time",
    "macros",
    "migrate",
] }
# One Kubernetes Job per task (ADR-0004); rustls to match the rest of the crate.
kube = { version = "0.99", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
# Prometheus /metrics, rendered as text exposition and served on our own route.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
# Neo4j (Bolt) structural graph; the control plane owns the write (trust boundary, ADR-0002/0019).
neo4rs = "0.8"
# MCP client (ADR-0066): calls whatever in-cluster MCP servers are configured
# (knowledge_tools.mcp_servers, e.g. brave-search/context7) as the review agent's dynamically
# discovered external-knowledge tools. `reqwest` feature pulls rustls (matches the workspace TLS
# policy above), not native-tls.
rmcp = { version = "2", default-features = false, features = [
    "client",
    "reqwest",
    "transport-streamable-http-client-reqwest",
] }

# --- agent-runner: indexing + MCP ---
# tree-sitter grammars compile their C grammar via build script (cc in the builder image).
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
# Regex selectors for the per-tier tool allowlist's `mcp__<server>__<tool>` patterns (ADR-0066).
regex = "1"

# --- Dev / test only ---
tempfile = "3"
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
wiremock = "0.6"
