[package]
name = "agent-runner"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightbridge agent runner: the per-task Kubernetes Job that clones, indexes, and reviews a repo."
# With the extra MCP-server bins below, `cargo run -p agent-runner` is ambiguous; pin the runner as
# the default target so the package.json `dev` script (and `turbo`) keep working.
default-run = "agent-runner"

[[bin]]
name = "agent-runner"
path = "src/main.rs"

# MCP servers OpenCode spawns over stdio (slice 4b, ADR-0020). They wrap the control-plane retrieval
# API; they hold only the runner bearer + (vector) the embeddings key — no datastore credentials.
[[bin]]
name = "lightbridge-vector-mcp"
path = "src/bin/vector-mcp.rs"

[[bin]]
name = "lightbridge-graph-mcp"
path = "src/bin/graph-mcp.rs"

[dependencies]
anyhow.workspace = true
lightbridge-config = { path = "../config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# rustls to match the control plane (no OpenSSL in the runtime image).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Tree-sitter: syntax-aware chunking (ADR-0010). Grammar crates compile the C grammar via the
# build script (cc required in the builder stage — present in the official Rust image).
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
# MCP (Model Context Protocol) server SDK for the stdio tool servers (slice 4b). `schemars` is
# re-exported by rmcp, so we don't pin it separately.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }

[dev-dependencies]
# HTTP mocking for the control-plane client contract tests (no live control plane).
wiremock = "0.6"
tempfile = "3"
