[package]
name = "agent-runner"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightbridge agent runner: the per-task Kubernetes Job that clones, indexes, and reviews a repo."

[[bin]]
name = "agent-runner"
path = "src/main.rs"

# Versions + features are centralized in the workspace root Cargo.toml.
[dependencies]
anyhow.workspace = true
lightbridge-config = { path = "../config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
uuid.workspace = true
# Tree-sitter syntax-aware chunking (ADR-0010).
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true

[dev-dependencies]
# HTTP mocking for the control-plane client contract tests (no live control plane).
wiremock.workspace = true
tempfile.workspace = true
