[package]
name = "control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightbridge control plane: standalone, portable HTTP control + authN surface."

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
