[package]
name = "control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightbridge control plane: HTTP control surface + OAuth2 resource server (OIDC/JWT)."

[[bin]]
name = "control-plane"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.8"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.5"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known", "formatting"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "postgres",
    "uuid",
    "time",
    "macros",
    "migrate",
] }
# Dispatcher role: create one Kubernetes Job per task (ADR-0004). rustls to match the rest of the
# crate (no OpenSSL).
kube = { version = "0.99", default-features = false, features = [
    "client",
    "rustls-tls",
] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

[dev-dependencies]
# Test-only: generate an RSA keypair at runtime so no private key is committed (see src/jwt.rs).
rsa = "0.9"
rand = "0.8"
base64 = "0.22"
