[package]
name = "control-plane"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightbridge control plane: HTTP control surface + OAuth2 resource server (OIDC/JWT)."

[[bin]]
name = "control-plane"
path = "src/main.rs"

# Versions + features are centralized in the workspace root Cargo.toml.
[dependencies]
anyhow.workspace = true
lightbridge-config = { path = "../config" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
uuid.workspace = true
time.workspace = true
sqlx.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
neo4rs.workspace = true

[dev-dependencies]
# Test-only: generate an RSA keypair at runtime so no private key is committed (see src/jwt.rs).
rsa.workspace = true
rand.workspace = true
base64.workspace = true
